# axross

./: CONTRIBUTING.md  Dockerfile.build  Dockerfile.mcp  INSTALL.md  LICENSE  NOTICE  OAUTH_SETUP.md  README.md  README_de.md  README_es.md  THIRD_PARTY_LICENSES.md  main.py  pyproject.toml  setup.py
.github/workflows/: codacy.yml  codeql.yml  osv-scanner.yml
core/: adb_client.py  archive.py  atomic_io.py  atomic_recovery.py  azure_client.py  backend.py  backend_registry.py  bookmarks.py  cas.py  client_identity.py  connect_worker.py  connection_manager.py  credentials.py  db_fs_base.py  dfsn_client.py  dropbox_client.py  elevated_io.py  encrypted_overlay.py  exchange_client.py  ftp_client.py  fuse_mount.py  gdrive_client.py  git_fs_client.py  git_fs_writer_helper.py  gopher_client.py  imap_client.py  iscsi_client.py  ldap_fs_client.py  local_fs.py  mcp_http.py  mcp_server.py  metadata_index.py  mongo_fs_client.py  mtp_client.py  net_helpers.py  nfs_client.py  nntp_client.py  nntp_lib.py  onedrive_client.py  pjl_client.py  (+37 more)
docs/: HANDBUCH.md  MCP.md  MCP_de.md  MCP_es.md  OPSEC.md  PROXY_SUPPORT.md  SCRIPTING.md  SCRIPTING_REFERENCE.md  SCRIPTING_de.md  SCRIPTING_es.md  USAGE.md  USAGE_de.md  USAGE_es.md
models/: file_item.py  file_table_model.py  file_version.py  transfer_model.py  trash_entry.py  xlink.py
resources/scripts/: atomic_replace.py  backend_capabilities.py  bookmark_audit.py  bookmarks_export.py  bulk_rename.py  cas_dedupe.py  cisco_collect.py  connection_probe.py  dedupe.py  du.py  encrypted_archive.py  encrypted_stream.py  find_secrets.py  fingerprint_diff.py  git_changelog.py  gopher_archive.py  hash_audit.py  imap_archive.py  lab_smoke.py  mirror.py  nntp_subjects.py  port_scan.py  profile_audit.py  ramfs_decrypt.py  ramfs_pipeline.py  redact.py  s3_inventory.py  slp_inventory.py  snapshot_walk.py  sqlite_export.py  tftp_audit.py  webdav_quota.py
resources/wordlists/: tftp_common.txt
tests/: test_backend_regressions.py  test_e2e.py  test_hardening_regressions.py  test_network.py  test_new_features.py  test_packaging.py  test_pane_layout_regressions.py  test_protocols.py  test_regressions.py  test_windows_integration.py
tests/docker/: CREDENTIALS.md  Dockerfile  Dockerfile.cisco  Dockerfile.ftp  Dockerfile.ftps  Dockerfile.httpproxy  Dockerfile.imap  Dockerfile.iscsi  Dockerfile.ldap  Dockerfile.minio  Dockerfile.nfs  Dockerfile.rsh  Dockerfile.rsync  Dockerfile.smb  Dockerfile.snmpd  Dockerfile.socks  Dockerfile.ssh  Dockerfile.telnet  Dockerfile.testrunner  Dockerfile.tftp  Dockerfile.webdav  TESTENV.md  axross-lab-profiles.json  cisco_fake.py  docker-compose.yml  ganesha.conf  minio-entrypoint.sh  rsyncd.conf  smb.conf  sockd.conf  telnetd.xinetd  test_profiles.json  verify_lab_profiles.py  vsftpd-ftps.conf  vsftpd-implicit.conf  vsftpd.conf  webdav-vhost.conf
ui/: batch_rename_dialog.py  bookmark_edit_dialog.py  bookmark_sidebar.py  cas_dialog.py  checksum_dialog.py  column_prefs.py  connection_dialog.py  create_xlink_dialog.py  dock_titlebar.py  elevated_viewer.py  file_pane.py  hex_editor.py  icon_provider.py  image_viewer.py  layout_presets.py  layout_utils.py  log_dock.py  main_window.py  metadata_search_dialog.py  permissions_dialog.py  repl_widget.py  snapshot_browser_dialog.py  terminal_pane.py  terminal_widget.py  text_editor.py  transfer_dock.py  trash_browser.py
