[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axross"
version = "0.4.0"
description = "A flexible multi-protocol file manager built with PyQt6"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Marco Lux", email = "mlux@undisclose.de" },
]
keywords = [
    "file-manager",
    "sftp",
    "smb",
    "webdav",
    "s3",
    "mcp",
    "multi-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.6",
    "paramiko>=3.4",
    "PySocks>=1.7",
    "keyring>=25.0",
]

[project.urls]
Homepage = "https://github.com/c0decave/axross"
Repository = "https://github.com/c0decave/axross"
Issues = "https://github.com/c0decave/axross/issues"
Documentation = "https://github.com/c0decave/axross#readme"

[project.optional-dependencies]
smb = ["smbprotocol>=1.13"]
webdav = ["requests>=2.31", "defusedxml>=0.7"]
s3 = ["boto3>=1.28"]
azure = ["azure-storage-blob>=12.19", "azure-storage-file-share>=12.15"]
onedrive = ["msal>=1.26", "requests>=2.31"]
gdrive = ["google-api-python-client>=2.100", "google-auth-oauthlib>=1.1", "google-auth-httplib2>=0.2"]
dropbox = ["dropbox>=12.0"]
fuse = ["fusepy>=3.0"]
winrm = ["pywinrm>=0.4"]
wmi = ["impacket>=0.11"]
exchange = ["exchangelib>=5.0"]
adb = ["adb-shell>=0.4"]
archive = ["py7zr>=0.20"]
tftp = ["tftpy>=0.8"]
postgres = ["psycopg[binary]>=3.1"]
redis = ["redis>=5.0"]
mongo = ["pymongo>=4.6"]
git = ["dulwich>=0.21"]
dns = ["dnspython>=2.6"]
magic = ["puremagic>=1.20"]
encoding = ["chardet>=5.2"]
snmp = ["pysnmp>=6.2"]
ldap = ["ldap3>=2.9"]
mac = ["manuf>=1.1"]
whois = ["ipwhois>=1.3"]
ntp = ["ntplib>=0.4"]
all = [
    "smbprotocol>=1.13",
    "defusedxml>=0.7",
    "boto3>=1.28",
    "azure-storage-blob>=12.19",
    "azure-storage-file-share>=12.15",
    "msal>=1.26",
    "requests>=2.31",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.2",
    "dropbox>=12.0",
    "dnspython>=2.6",
    "puremagic>=1.20",
    "chardet>=5.2",
    "pysnmp>=6.2",
    "ldap3>=2.9",
    "manuf>=1.1",
    "ipwhois>=1.3",
    "ntplib>=0.4",
]

[project.scripts]
axross = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["core", "ui", "models"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Bundled example scripts under resources/scripts/ are exec()-ed inside
# the REPL with ``axross`` injected as a global; static linters can't
# see that binding. Suppress F821 (undefined name) and F401 (unused
# import) for that tree only.
"resources/scripts/*.py" = ["F821", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
